# data-source-guide-example

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  tasks.py
.github/workflows/: build-and-deploy.yaml  docker-build-and-run.yaml
app/: app.py
docker/: build-prepare.sh  runtime-entrypoint.sh
tasks/: common.py  dev.py  serve.py
