[tool.poetry]
name = "data-source-guide-example"
version = "0.1.0"
description = ""
authors = ["Andrew <dyusha.ru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
