[tool.poetry]
name = "data-source-guide-example"
version = "0.1.0"
description = ""
authors = ["IOXIO Oy"]
readme = "README.md"
packages = [{include = "app", from="."}]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.1"
uvicorn = "^0.38.0"
typer = "^0.20.0"

[tool.skjold]
report_only = false
sources = ["pyup", "gemnasium"]

[tool.poetry.scripts]
dev = "tasks.dev:cli"
serve = "tasks.serve:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
